Fixed CI/CD Pipeline